# neuromorphe-traum-engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  HANDS-ON-DOKUMENTATION.md  Makefile  NEUROMORPHIC_ENGINE_README.md  README.md  TECHNISCHE_DOKUMENTATION.md  ai_module_analysis.md  analyze_techno_beats.py  check_db.py  check_db_tables.py  check_path.py  check_paths.py  check_stems.py  check_uploads.py  create_inits.py  create_test_audio_directive_004.py  docker-compose.dev.yml  docker-compose.yml  example_musical_arrangement.py  fix_imports.py  main.py  migrate_database.py  project_architecture.md  pyproject.toml  pytest.ini  requirements.txt  run.py  start_neuromorphic_engine.py  test_all_functionality.py  test_audio_upload.py  test_musical_intelligence.py  test_mvp_system.py  test_neuromorphic_engine.py  test_search_functionality.py  test_streamlit_pages.py  test_system.py  (+2 more)
Construction_Plans/: AGENTEN_DIREKTIVE_001.md  AGENTEN_DIREKTIVE_002.md  AGENTEN_DIREKTIVE_003.md  AGENTEN_DIREKTIVE_004.md  AGENTEN_DIREKTIVE_005_(MASTER_MVP_auf_bestehender_Architektur).md  AGENTEN_DIREKTIVE_006.md  AGENTEN_DIREKTIVE_007_(MASTER_MVP).md  AGENTEN_DIREKTIVE_008.md  AGENTEN_DIREKTIVE_009  AGENTEN_DIREKTIVE_010_(SPRINT_1_BACKEND_FUNDAMENT)  AGENTEN_DIREKTIVE_012_(MASTER-PLAN_-_VON_CODE_ZU_DEPLOYMENT).md  AGENTEN_DIREKTIVE_014.md  BACKEND_ARCHITECTURE_SPEC.md  CONSTRUCTION_OVERVIEW.md  DOCKER_DEPLOYMENT_SPEC.md  FRONTEND_ARCHITECTURE_SPEC.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN_DIRECTIVE_014.md  IMPLEMENTATION_PLAN_v2.md
docs/: ARCHITECTURE.md  (+3 more)
(+138 files in other folders)
